fix BackdropModal text-color & webkit-scrollbar-thumb:hover error in firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,19 +105,25 @@
 .scrollbar::-webkit-scrollbar {
   width: 2px;
   /*height: 20px;*/
+  
 }
 .scrollbar::-webkit-scrollbar-track {
   /* border-radius: 100vh; */
-  background: #f7f4ed;
+  background: #e0dfea;
 }
 .scrollbar::-webkit-scrollbar-thumb {
-  /* background: #e0cbcb; */
+  background: #123af0;
+  filter: brightness(200%); 
   border-radius: 100vh;
   /* border: 3px solid #f6f7ed; */
 }
+
+/* Error with Firefox webkit-scrollbar-thumb:hover*/
+/*
 .scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #c0a0b9;
+  background: #c0a0b9; 
 }
+*/
 
 /*
 @keyframes shadow-slide {
